--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -1,7 +1,5 @@
-- name: Download a Build Artifact
-  uses: actions/download-artifact@v2
-  with:
-    # Artifact name
-    name: # optional
-    # Destination path
-    path: # optional
+on:
+  push:
+    branches:
+      - master
+        - release/*
